Update output documentation

--- a/index.html
+++ b/index.html
@@ -50,6 +50,46 @@
       </div> <!-- end category_list -->
     </div> <!-- end category -->
     <div class="clearfix"></div>
+      
+    <div class="category">
+      <div class="category_name">
+        <h2 id="os">Os
+        </h2>
+      </div>
+      <div class="category_list">
+        <ul>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Linux&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./os/RenameNIC.html">RenameNIC</a>
+                </div>
+              </div>
+          </li>
+        </ul>
+      </div> <!-- end category_list -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>
+      
+    <div class="category">
+      <div class="category_name">
+        <h2 id="storage">Storage
+        </h2>
+      </div>
+      <div class="category_list">
+        <ul>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Storage/Disk&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./storage/DiskParted.html">Parted</a>
+                </div>
+              </div>
+          </li>
+        </ul>
+      </div> <!-- end category_list -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>
   </div> <!-- end category_item -->
     </div>
     <div id="footer">
@@ -61,7 +101,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-18 21:17:42</p>
+        <p>Page Updated 2019-08-18 22:13:44</p>
       </div> <!-- end footer-right -->
     </div>
 
