Update output documentation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Editor&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./client/AtomOsx.html">Atom</a>
+                  <a href="./client/Editor.AtomOsx.html">Atom</a>
                 </div>
               </div>
           </li>  
@@ -42,7 +42,7 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Blog&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./client/SimikiWiki.html">SimikiWiki</a>
+                  <a href="./client/Blog.SimikiWiki.html">SimikiWiki</a>
                 </div>
               </div>
           </li>
@@ -60,9 +60,43 @@
         <ul>  
           <li class="pagelist">
               <div class="list_wrapper">
-                <div class="coll_name item_arrow">&#91;Linux&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_name item_arrow">&#91;CentOS/Repo&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./os/RenameNIC.html">RenameNIC</a>
+                  <a href="./os/Linux.Repo.html">CentOSRepo</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Container/Docker&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./os/Container.DockerConf.html">DockerConf</a>&nbsp;&#47;&nbsp;
+                  <a href="./os/Container.DockerFile.html">DockerFile</a>&nbsp;&#47;&nbsp;
+                  <a href="./os/Container.DockerInstall.html">DockerInstall</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Linux/Kernel&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./os/Linux.KernelUpgrade.html">KernelUpgrade</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Linux/Init&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./os/Linux.RenameNIC.html">RenameNIC</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Ubuntu/Init&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./os/Ubuntu.Init.html">Ubuntu</a>
                 </div>
               </div>
           </li>
@@ -82,7 +116,7 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Storage/Disk&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./storage/DiskParted.html">Parted</a>
+                  <a href="./storage/Storage.DiskParted.html">Parted</a>
                 </div>
               </div>
           </li>
@@ -101,7 +135,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-18 22:13:44</p>
+        <p>Page Updated 2019-08-20 14:04:18</p>
       </div> <!-- end footer-right -->
     </div>
 
