--- a/client/Blog.SimikiWiki.html
+++ b/client/Blog.SimikiWiki.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#client">client</a>
+    <a href="/wiki/#../../../Dropbox/wiki/client">../../../Dropbox/wiki/client</a>
     &nbsp;&#187;&nbsp;SimikiWiki
     <span class="updated">Page Updated&nbsp;
     2019-08-18 21:16
@@ -191,7 +191,7 @@ _config.yml：http://simiki.org/zh-docs/configuration.html</p>
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-18 23:09:22</p>
+        <p>Page Updated 2019-08-20 14:04:18</p>
       </div> <!-- end footer-right -->
     </div>
 
