--- a/os/Linux.RenameNIC.html
+++ b/os/Linux.RenameNIC.html
@@ -20,10 +20,10 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#os">os</a>
+    <a href="/wiki/#../../../Dropbox/wiki/os">../../../Dropbox/wiki/os</a>
     &nbsp;&#187;&nbsp;RenameNIC
     <span class="updated">Page Updated&nbsp;
-    2019-06-02 00:00
+    2019-08-02 00:00
     </span>
   </div>
 </div>
@@ -132,7 +132,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-18 23:09:22</p>
+        <p>Page Updated 2019-08-20 14:04:18</p>
       </div> <!-- end footer-right -->
     </div>
 
