Update output documentation

--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
       
     <div class="category">
       <div class="category_name">
+        <h2 id="ops">Ops
+        </h2>
+      </div>
+      <div class="category_list">
+        <ul>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;System/Dns&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./ops/OpsSystem.Nscd.html">Nscd</a>
+                </div>
+              </div>
+          </li>
+        </ul>
+      </div> <!-- end category_list -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>
+      
+    <div class="category">
+      <div class="category_name">
         <h2 id="os">Os
         </h2>
       </div>
@@ -60,9 +80,18 @@
         <ul>  
           <li class="pagelist">
               <div class="list_wrapper">
-                <div class="coll_name item_arrow">&#91;CentOS/Repo&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_name item_arrow">&#91;Repo&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./os/Linux.Repo.html">CentOSRepo</a>
+                  <a href="./os/Repo.CentOS.html">CentOSRepo</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;System/Tools&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./os/Tools.Chrony.html">Chrony</a>&nbsp;&#47;&nbsp;
+                  <a href="./os/Tools.Supervisor.html">Supervisor</a>
                 </div>
               </div>
           </li>  
@@ -114,6 +143,14 @@
         <ul>  
           <li class="pagelist">
               <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Storage/Mysql&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./storage/Storage.MysqlDeploy.html">MysqlDeploy</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Storage/Disk&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./storage/Storage.DiskParted.html">Parted</a>
@@ -135,7 +172,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-20 14:04:18</p>
+        <p>Page Updated 2019-08-20 15:22:20</p>
       </div> <!-- end footer-right -->
     </div>
 
