--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
         <ul>  
           <li class="pagelist">
               <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Storage/Ceph&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./storage/Storage.CephRBD.html">CephRBD</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Storage/Mysql&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./storage/Storage.MysqlDeploy.html">MysqlDeploy</a>
@@ -172,7 +180,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-20 18:09:54</p>
+        <p>Page Updated 2019-08-21 22:27:41</p>
       </div> <!-- end footer-right -->
     </div>
 
