Update output documentation

--- a/storage/Storage.CephRBD.html
+++ b/storage/Storage.CephRBD.html
@@ -57,24 +57,38 @@
 
 
 <h3 id="3create-a-block-device-pool">3.Create a block device pool</h3>
-<p>deploy节点<a href="https://docs.ceph.com/docs/master/rados/operations/pools/#create-a-pool">创建池</a>，名称建议使用"rbd"</p>
+<ol>
+<li>deploy节点<a href="https://docs.ceph.com/docs/master/rados/operations/pools/#create-a-pool">创建池</a>，名称建议使用"rbd"</li>
+<li>块设备<a href="https://docs.ceph.com/docs/master/rbd/rados-rbd-cmds/#basic-block-device-commands">Command</a>，<a href="https://docs.ceph.com/docs/master/man/8/rbd/#examples">Examples</a></li>
+</ol>
 <blockquote>
 <p>少于5个OSD设置<code>pg_num</code>为128<br />
 5到10个OSD设置<code>pg_num</code>为512<br />
 10到50个OSD设置<code>pg_num</code>为1024<br />
 大于50OSD，<a href="https://ceph.com/pgcalc/">REFERNECE</a></p>
 </blockquote>
-<div class="hlcode"><pre><span class="cp"># 查看集群池</span>
+<div class="hlcode"><pre><span class="cp"># 查看集群池 </span>
 <span class="err">$</span> <span class="n">ceph</span> <span class="n">osd</span> <span class="n">lspools</span>
 
-<span class="cp"># create a pool </span>
-<span class="err">$</span> <span class="n">ceph</span> <span class="n">osd</span> <span class="n">pool</span> <span class="n">create</span> <span class="n">rbd</span> <span class="mi">128</span>
+<span class="cp"># deploy节点创建池</span>
+<span class="err">$</span> <span class="n">ceph</span> <span class="n">osd</span> <span class="n">pool</span> <span class="n">create</span> <span class="n">rbd</span> <span class="mi">128</span> 
+<span class="cp"># deploy节点初始化池 </span>
+<span class="err">$</span> <span class="n">rbd</span> <span class="n">pool</span> <span class="n">init</span> <span class="n">rbd</span>
 
+<span class="cp"># ceph-client 创建块设备镜像</span>
+<span class="cp"># e.g: rbd create --size {megabytes} {pool-name}/{image-name}</span>
+<span class="err">$</span> <span class="n">rbd</span> <span class="n">create</span> <span class="n">rbd1</span> <span class="o">--</span><span class="n">size</span> <span class="mi">1</span><span class="n">G</span> <span class="o">--</span><span class="n">image</span><span class="o">-</span><span class="n">feature</span> <span class="n">layering</span> <span class="o">--</span><span class="n">name</span> <span class="n">client</span><span class="p">.</span><span class="n">admin</span>
+<span class="cp"># 镜像映射到设备</span>
+<span class="err">$</span> <span class="n">rbd</span> <span class="n">map</span> <span class="o">--</span><span class="n">image</span> <span class="n">rbd1</span> <span class="o">--</span><span class="n">name</span> <span class="n">client</span><span class="p">.</span><span class="n">admin</span>
+<span class="cp"># 创建文件系统来使用块设备</span>
+<span class="err">$</span> <span class="n">mkfs</span><span class="p">.</span><span class="n">ext4</span> <span class="o">-</span><span class="n">m0</span> <span class="o">/</span><span class="n">dev</span><span class="o">/</span><span class="n">rbd</span><span class="o">/</span><span class="n">rbd</span><span class="o">/</span><span class="n">rbd1</span>
+<span class="cp"># ceph-client节点挂载文件系统</span>
+<span class="err">$</span> <span class="n">mkdir</span> <span class="o">/</span><span class="n">data</span><span class="o">/</span><span class="n">ceph</span><span class="o">-</span><span class="n">block</span><span class="o">-</span><span class="n">device</span>
+<span class="err">$</span> <span class="n">mount</span> <span class="o">/</span><span class="n">dev</span><span class="o">/</span><span class="n">rbd</span><span class="o">/</span><span class="n">rbd</span><span class="o">/</span><span class="n">rbd1</span> <span class="o">/</span><span class="n">data</span><span class="o">/</span><span class="n">ceph</span><span class="o">-</span><span class="n">block</span><span class="o">-</span><span class="n">device</span>
+<span class="err">$</span> <span class="n">cd</span> <span class="o">/</span><span class="n">data</span><span class="o">/</span><span class="n">ceph</span><span class="o">-</span><span class="n">block</span><span class="o">-</span><span class="n">device</span>
 
-<span class="err">$</span> <span class="n">rbd</span> <span class="n">pool</span> <span class="n">init</span> <span class="o">&lt;</span><span class="n">pool</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span>
-
-<span class="cp"># configure</span>
-<span class="err">$</span> 
+<span class="cp"># delet ceph pool</span>
+<span class="err">$</span> <span class="n">ceph</span> <span class="n">osd</span> <span class="n">pool</span> <span class="n">delete</span> <span class="n">rbd1</span> <span class="n">rbd1</span> <span class="o">--</span><span class="n">yes</span><span class="o">-</span><span class="n">i</span><span class="o">-</span><span class="n">really</span><span class="o">-</span><span class="n">really</span><span class="o">-</span><span class="n">mean</span><span class="o">-</span><span class="n">it</span>
 </pre></div>
   
 </div>
@@ -88,7 +102,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-21 22:27:41</p>
+        <p>Page Updated 2019-08-21 23:42:15</p>
       </div> <!-- end footer-right -->
     </div>
 
