Update output documentation

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Storage/Ceph&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
+                  <a href="./storage/Storage.CephFS.html">CephFS</a>&nbsp;&#47;&nbsp;
                   <a href="./storage/Storage.CephRBD.html">CephRBD</a>
                 </div>
               </div>
@@ -180,7 +181,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-21 23:42:15</p>
+        <p>Page Updated 2019-08-22 21:42:39</p>
       </div> <!-- end footer-right -->
     </div>
 
