--- a/storage/Storage.CephFS.html
+++ b/storage/Storage.CephFS.html
@@ -39,14 +39,64 @@
 <h3 id="2deploy">2.Deploy</h3>
 <p><strong>CephFS 需要配置metadata server</strong></p>
 <blockquote>
-<p>至少需一个元数据服务器</p>
+<p>至少需要两个RADOS池，一个元数据(ssd)服务器，一个用于数据。</p>
+<p>用于创建文件系统的数据池是“默认”数据池和用于存储所有inode回溯信息的位置，用于硬链接管理和灾难恢复</p>
+<p>需要了解下擦除编码池(<a href="https://docs.ceph.com/docs/master/rados/operations/erasure-code/#ecpool">ecpool</a>)，对象在多个磁盘复制，默认支持丢失两个OSD，简单点说可以做到2TB存1T数据。</p>
 </blockquote>
 <div class="hlcode"><pre><span class="cp"># create a metadata server</span>
 <span class="err">$</span> <span class="n">ceph</span><span class="o">-</span><span class="n">deploy</span> <span class="n">mds</span> <span class="n">create</span> <span class="n">hadoop</span><span class="o">-</span><span class="n">s02</span><span class="o">-</span><span class="mi">235</span>
+
+<span class="cp"># create file system</span>
+<span class="err">$</span> <span class="n">ceph</span> <span class="n">osd</span> <span class="n">pool</span> <span class="n">create</span> <span class="n">cephfs_data</span> <span class="mi">128</span>
+<span class="err">$</span> <span class="n">ceph</span> <span class="n">osd</span> <span class="n">pool</span> <span class="n">create</span> <span class="n">cephfs_metadata</span> <span class="mi">128</span>
+<span class="cp"># new fs</span>
+<span class="err">$</span> <span class="n">ceph</span> <span class="n">fs</span> <span class="n">new</span> <span class="n">cephfs</span> <span class="n">cephfs_metadata</span> <span class="n">cephfs_data</span>
+
+<span class="cp"># 配置密钥</span>
+<span class="err">$</span> <span class="n">cat</span> <span class="o">/</span><span class="n">etc</span><span class="o">/</span><span class="n">ceph</span><span class="o">/</span><span class="n">admin</span><span class="p">.</span><span class="n">secret</span>
+<span class="n">AQB7LVBb9xTNFBAAjZfXOChO685MHBby2oADPQ</span><span class="o">==</span>
+
+<span class="cp"># 配置文件</span>
+<span class="err">$</span> <span class="n">cat</span> <span class="o">/</span><span class="n">etc</span><span class="o">/</span><span class="n">ceph</span><span class="o">/</span><span class="n">ceph</span><span class="p">.</span><span class="n">client</span><span class="p">.</span><span class="n">admin</span><span class="p">.</span><span class="n">keyring</span>
+<span class="p">[</span><span class="n">client</span><span class="p">.</span><span class="n">admin</span><span class="p">]</span>
+    <span class="n">key</span> <span class="o">=</span> <span class="n">AQB7LVBb9xTNFBAAjZfXOChO685MHBby2oADPQ</span><span class="o">==</span>
+    <span class="n">caps</span> <span class="n">mds</span> <span class="o">=</span> <span class="s">&quot;allow *&quot;</span>
+    <span class="n">caps</span> <span class="n">mon</span> <span class="o">=</span> <span class="s">&quot;allow *&quot;</span>
+    <span class="n">caps</span> <span class="n">osd</span> <span class="o">=</span> <span class="s">&quot;allow *&quot;</span>
 </pre></div>
 
 
-<h3 id="_1"></h3>
+<h3 id="3mount">3.Mount</h3>
+<blockquote>
+<p>内核驱动程序 or 用户空间(FUSE)</p>
+</blockquote>
+<p>将CephFS挂载为内核驱动 </p>
+<p>```sh e<br />
+$ mkdir /mnt/cephfs<br />
+$ mount -t ceph {ip-address-of-monitor}:6789:/ /mnt/cephfs</p>
+<h1 id="cephnamesecretfile">Ceph存储集群默认使用身份验证。指定用户name和secretfile</h1>
+<p>$ mount -t ceph 192.168.1.235:6789:/ /mnt/cephfs -o name=admin,secretfile=/etc/ceph/admin.secret</p>
+<div class="hlcode"><pre><span class="err">将</span><span class="n">CephFS</span><span class="err">挂载为用户空间</span><span class="p">(</span><span class="n">FUSE</span><span class="p">)</span><span class="err">中的文件系统</span>
+
+<span class="err">```</span><span class="n">shell</span>
+<span class="cp"># install</span>
+<span class="err">$</span> <span class="n">yum</span> <span class="n">install</span> <span class="o">-</span><span class="n">y</span> <span class="n">ceph</span><span class="o">-</span><span class="n">fuse</span>
+<span class="err">$</span> <span class="n">mkdir</span> <span class="o">~/</span><span class="n">mycephfs</span>
+<span class="err">$</span> <span class="n">ceph</span><span class="o">-</span><span class="n">fuse</span> <span class="o">-</span><span class="n">m</span> <span class="p">{</span><span class="n">ip</span><span class="o">-</span><span class="n">address</span><span class="o">-</span><span class="n">of</span><span class="o">-</span><span class="n">monitor</span><span class="p">}</span><span class="o">:</span><span class="mi">6789</span> <span class="o">~/</span><span class="n">mycephfs</span>
+
+<span class="cp"># 指定密钥验证</span>
+<span class="err">$</span> <span class="n">ceph</span><span class="o">-</span><span class="n">fuse</span> <span class="o">-</span><span class="n">k</span> <span class="p">.</span><span class="o">/</span><span class="n">ceph</span><span class="p">.</span><span class="n">client</span><span class="p">.</span><span class="n">admin</span><span class="p">.</span><span class="n">keyring</span> <span class="o">-</span><span class="n">m</span> <span class="mf">192.168.1.235</span><span class="o">:</span><span class="mi">6789</span> <span class="o">~/</span><span class="n">mycephfs</span>
+
+<span class="cp"># 卸载</span>
+<span class="err">$</span> <span class="n">fusermount</span> <span class="o">-</span><span class="n">u</span> <span class="o">~/</span><span class="n">mycephfs</span>
+</pre></div>
+
+
+<p>fstab</p>
+<div class="hlcode"><pre><span class="n">cat</span> <span class="o">/</span><span class="n">etc</span><span class="o">/</span><span class="n">fstab</span>
+<span class="cp">#######</span>
+<span class="mf">192.168.1.235</span><span class="o">:</span><span class="mi">6789</span><span class="o">:/</span>  <span class="o">/</span><span class="n">mnt</span><span class="o">/</span><span class="n">cephfs</span>  <span class="n">ceph</span>  <span class="n">name</span><span class="o">=</span><span class="n">admin</span><span class="p">,</span><span class="n">secretfile</span><span class="o">=/</span><span class="n">etc</span><span class="o">/</span><span class="n">ceph</span><span class="o">/</span><span class="n">admin</span><span class="p">.</span><span class="n">secret</span><span class="p">,</span><span class="n">noatime</span><span class="p">,</span><span class="n">_netdev</span>  <span class="mi">0</span>  <span class="mi">2</span>
+</pre></div>
   
 </div>
     </div>
@@ -59,7 +109,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-22 21:42:39</p>
+        <p>Page Updated 2019-08-22 23:20:44</p>
       </div> <!-- end footer-right -->
     </div>
 
