--- a/storage/Storage.CephFS.html
+++ b/storage/Storage.CephFS.html
@@ -71,15 +71,16 @@
 <p>内核驱动程序 or 用户空间(FUSE)</p>
 </blockquote>
 <p>将CephFS挂载为内核驱动 </p>
-<p>```sh e<br />
-$ mkdir /mnt/cephfs<br />
-$ mount -t ceph {ip-address-of-monitor}:6789:/ /mnt/cephfs</p>
-<h1 id="cephnamesecretfile">Ceph存储集群默认使用身份验证。指定用户name和secretfile</h1>
-<p>$ mount -t ceph 192.168.1.235:6789:/ /mnt/cephfs -o name=admin,secretfile=/etc/ceph/admin.secret</p>
-<div class="hlcode"><pre><span class="err">将</span><span class="n">CephFS</span><span class="err">挂载为用户空间</span><span class="p">(</span><span class="n">FUSE</span><span class="p">)</span><span class="err">中的文件系统</span>
+<div class="hlcode"><pre><span class="err">$</span> <span class="n">mkdir</span> <span class="o">/</span><span class="n">mnt</span><span class="o">/</span><span class="n">cephfs</span>
+<span class="err">$</span> <span class="n">mount</span> <span class="o">-</span><span class="n">t</span> <span class="n">ceph</span> <span class="p">{</span><span class="n">ip</span><span class="o">-</span><span class="n">address</span><span class="o">-</span><span class="n">of</span><span class="o">-</span><span class="n">monitor</span><span class="p">}</span><span class="o">:</span><span class="mi">6789</span><span class="o">:/</span> <span class="o">/</span><span class="n">mnt</span><span class="o">/</span><span class="n">cephfs</span>
 
-<span class="err">```</span><span class="n">shell</span>
-<span class="cp"># install</span>
+<span class="cp"># Ceph存储集群默认使用身份验证。指定用户name和secretfile </span>
+<span class="err">$</span> <span class="n">mount</span> <span class="o">-</span><span class="n">t</span> <span class="n">ceph</span> <span class="mf">192.168.1.235</span><span class="o">:</span><span class="mi">6789</span><span class="o">:/</span> <span class="o">/</span><span class="n">mnt</span><span class="o">/</span><span class="n">cephfs</span> <span class="o">-</span><span class="n">o</span> <span class="n">name</span><span class="o">=</span><span class="n">admin</span><span class="p">,</span><span class="n">secretfile</span><span class="o">=/</span><span class="n">etc</span><span class="o">/</span><span class="n">ceph</span><span class="o">/</span><span class="n">admin</span><span class="p">.</span><span class="n">secret</span>
+</pre></div>
+
+
+<p>将CephFS挂载为用户空间(FUSE)中的文件系统</p>
+<div class="hlcode"><pre><span class="cp"># install</span>
 <span class="err">$</span> <span class="n">yum</span> <span class="n">install</span> <span class="o">-</span><span class="n">y</span> <span class="n">ceph</span><span class="o">-</span><span class="n">fuse</span>
 <span class="err">$</span> <span class="n">mkdir</span> <span class="o">~/</span><span class="n">mycephfs</span>
 <span class="err">$</span> <span class="n">ceph</span><span class="o">-</span><span class="n">fuse</span> <span class="o">-</span><span class="n">m</span> <span class="p">{</span><span class="n">ip</span><span class="o">-</span><span class="n">address</span><span class="o">-</span><span class="n">of</span><span class="o">-</span><span class="n">monitor</span><span class="p">}</span><span class="o">:</span><span class="mi">6789</span> <span class="o">~/</span><span class="n">mycephfs</span>
@@ -109,7 +110,7 @@ $ mount -t ceph {ip-address-of-monitor}:6789:/ /mnt/cephfs</p>
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-22 23:20:44</p>
+        <p>Page Updated 2019-08-22 23:29:13</p>
       </div> <!-- end footer-right -->
     </div>
 
