--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
                 <div class="coll_list">
                   <a href="./storage/Storage.CephCluster.html">CephCluster</a>&nbsp;&#47;&nbsp;
                   <a href="./storage/Storage.CephFS.html">CephFS</a>&nbsp;&#47;&nbsp;
+                  <a href="./storage/Storage.CephIntro.html">CephIntro</a>&nbsp;&#47;&nbsp;
+                  <a href="./storage/Storage.CephRadosGW.html">CephRadosGW</a>&nbsp;&#47;&nbsp;
                   <a href="./storage/Storage.CephRBD.html">CephRBD</a>
                 </div>
               </div>
@@ -182,7 +184,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-22 23:29:13</p>
+        <p>Page Updated 2019-08-23 18:01:40</p>
       </div> <!-- end footer-right -->
     </div>
 
