--- a/storage/Storage.CephFS.html
+++ b/storage/Storage.CephFS.html
@@ -30,6 +30,7 @@
 <div class="clearfix"></div>
 <div id="content">
   <h2 id="cephfs">CephFS</h2>
+<p><img alt="" src="https://docs.ceph.com/docs/master/_images/ditaa-b5a320fc160057a1a7da010b4215489fa66de242.png" /></p>
 <h3 id="1env-prepare">1.ENV Prepare</h3>
 <ol>
 <li>ceph存储集群</li>
@@ -98,6 +99,10 @@
 <span class="cp">#######</span>
 <span class="mf">192.168.1.235</span><span class="o">:</span><span class="mi">6789</span><span class="o">:/</span>  <span class="o">/</span><span class="n">mnt</span><span class="o">/</span><span class="n">cephfs</span>  <span class="n">ceph</span>  <span class="n">name</span><span class="o">=</span><span class="n">admin</span><span class="p">,</span><span class="n">secretfile</span><span class="o">=/</span><span class="n">etc</span><span class="o">/</span><span class="n">ceph</span><span class="o">/</span><span class="n">admin</span><span class="p">.</span><span class="n">secret</span><span class="p">,</span><span class="n">noatime</span><span class="p">,</span><span class="n">_netdev</span>  <span class="mi">0</span>  <span class="mi">2</span>
 </pre></div>
+
+
+<h3 id="refernece">REFERNECE</h3>
+<p><a href="https://docs.ceph.com/docs/master/cephfs/#ceph-filesystem">CephFS</a></p>
   
 </div>
     </div>
@@ -110,7 +115,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-22 23:29:13</p>
+        <p>Page Updated 2019-08-23 18:01:40</p>
       </div> <!-- end footer-right -->
     </div>
 
