--- a/storage/Storage.CephRBD.html
+++ b/storage/Storage.CephRBD.html
@@ -33,6 +33,7 @@
 <blockquote>
 <p>Ceph块设备也称为<a href="https://docs.ceph.com/docs/master/glossary/#term-rbd">RBD</a>或<a href="https://docs.ceph.com/docs/master/glossary/#term-rados">RADOS</a> 块设备。</p>
 </blockquote>
+<p><img alt="" src="https://docs.ceph.com/docs/master/_images/ditaa-dc9f80d771b55f2daa5cbbfdb2dd0d3e6dfc17c0.png" /></p>
 <h3 id="1env-prepare">1.<a href="https://docs.ceph.com/docs/master/start/os-recommendations/#platforms">ENV Prepare</a></h3>
 <p>1.<a href="https://docs.ceph.com/docs/master/glossary/#term-ceph-storage-cluster">Ceph Storage Cluster</a> is in an <code>active + clean</code> <br />
 2.Kernel Version &gt; (4.19.z | 4.14.z) <br />
@@ -91,6 +92,10 @@
 <span class="cp"># delet ceph pool</span>
 <span class="err">$</span> <span class="n">ceph</span> <span class="n">osd</span> <span class="n">pool</span> <span class="n">delete</span> <span class="n">rbd1</span> <span class="n">rbd1</span> <span class="o">--</span><span class="n">yes</span><span class="o">-</span><span class="n">i</span><span class="o">-</span><span class="n">really</span><span class="o">-</span><span class="n">really</span><span class="o">-</span><span class="n">mean</span><span class="o">-</span><span class="n">it</span>
 </pre></div>
+
+
+<h3 id="refernece">REFERNECE</h3>
+<p><a href="https://docs.ceph.com/docs/master/rbd/#ceph-block-device">ceph-block-device</a></p>
   
 </div>
     </div>
@@ -103,7 +108,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-22 23:29:13</p>
+        <p>Page Updated 2019-08-23 18:01:40</p>
       </div> <!-- end footer-right -->
     </div>
 
