Update output documentation

--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
           </li>  
           <li class="pagelist">
               <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Unix/Tools&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./client/Unix.GitCMD.html">GitCMD</a>&nbsp;&#47;&nbsp;
+                  <a href="./client/Unix.MSshKey.html">MultipleSshKey</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Mac/Tools&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./client/Mac.UpgradeSystem.html">MacUpgradeSystem</a>&nbsp;&#47;&nbsp;
+                  <a href="./client/Mac.Vagrant.html">Vagrant</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Blog&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./client/Blog.SimikiWiki.html">SimikiWiki</a>
@@ -184,7 +202,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-23 18:01:40</p>
+        <p>Page Updated 2019-08-23 21:38:29</p>
       </div> <!-- end footer-right -->
     </div>
 
