Update output documentation

--- a/client/Mac.ModifyAppL.html
+++ b/client/Mac.ModifyAppL.html
@@ -31,7 +31,7 @@
 <div id="content">
   <h2 id="mac-modify-the-applications-default-language">Mac Modify the application's default language</h2>
 <blockquote>
-<p>Mac app 无法自定义语言</p>
+<p>用于 Mac app 无法自定义语言</p>
 </blockquote>
 <h3 id="example">Example:</h3>
 <h3 id="get-apps-bundle-identifier">Get App's Bundle Identifier</h3>
@@ -88,7 +88,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-25 20:09:45</p>
+        <p>Page Updated 2019-08-25 20:11:51</p>
       </div> <!-- end footer-right -->
     </div>
 
