Update output documentation

--- a/index.html
+++ b/index.html
@@ -79,9 +79,25 @@
         <ul>  
           <li class="pagelist">
               <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;System/Scanning&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./ops/OpsSystem.Masscan.html">Masscan</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;System/Dns&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./ops/OpsSystem.Nscd.html">Nscd</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Monitoring/Smokeping&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./ops/OpsMon.SmokepingAlerts.html">SomokepingAlerts</a>
                 </div>
               </div>
           </li>
@@ -129,6 +145,14 @@
                 <div class="coll_name item_arrow">&#91;Linux/Kernel&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./os/Linux.KernelUpgrade.html">KernelUpgrade</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Virtualization/Proxmox&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./os/Virtual.Proxmox.html">Proxmox</a>
                 </div>
               </div>
           </li>  
@@ -203,7 +227,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-25 20:11:51</p>
+        <p>Page Updated 2019-08-26 13:47:27</p>
       </div> <!-- end footer-right -->
     </div>
 
