Update output documentation

--- a/os/Virtual.Proxmox.html
+++ b/os/Virtual.Proxmox.html
@@ -580,7 +580,7 @@ rm -f /var/log/tuned/tuned.logroot
 
 
 <p><strong>7.2 配置双网卡</strong></p>
-<p><img alt="" src="https://www.dropbox.com/s/uf00h77tig77mti/proxmox-vm-nic.png?dl=0" /></p>
+<p><img alt="" src="https://raw.githubusercontent.com/uxun/img/master/imgs/proxmox-vm-nic.png" /></p>
 <div class="hlcode"><pre><span class="n">node</span> <span class="o">--&gt;</span> <span class="n">system</span> <span class="o">--&gt;</span> <span class="n">network</span> <span class="o">--&gt;</span> <span class="n">create</span> <span class="n">Linux</span> <span class="n">Bridge</span> <span class="o">--&gt;</span> <span class="n">vmbr1</span>
 <span class="n">vm</span> <span class="o">--&gt;</span> <span class="n">Hardware</span> <span class="o">--&gt;</span> <span class="n">Add</span> <span class="o">--&gt;</span> <span class="n">Network</span> <span class="n">Devive</span> <span class="o">--&gt;</span> <span class="n">e1000</span><span class="o">=</span> <span class="n">bridge</span><span class="o">=</span><span class="n">vmbr1</span>
 </pre></div>
@@ -596,7 +596,7 @@ rm -f /var/log/tuned/tuned.logroot
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-26 13:47:27</p>
+        <p>Page Updated 2019-08-26 16:19:56</p>
       </div> <!-- end footer-right -->
     </div>
 
