Update output documentation

--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Linux/Kernel&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./os/Linux.KernelUpgrade.html">KernelUpgrade</a>
+                  <a href="./os/Linux.KernelFIN_WAIT_2.html">FIN_WAIT_2</a>&nbsp;&#47;&nbsp;
+                  <a href="./os/Linux.KernelUpgrade.html">KernelUpgrade</a>&nbsp;&#47;&nbsp;
+                  <a href="./os/Linux.KernelRST.html">RST(TCP)</a>
                 </div>
               </div>
           </li>  
@@ -227,7 +229,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-26 16:19:56</p>
+        <p>Page Updated 2019-08-27 18:21:48</p>
       </div> <!-- end footer-right -->
     </div>
 
