Update output documentation

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="coll_name item_arrow">&#91;Unix/Tools&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./client/Unix.GitCMD.html">GitCMD</a>&nbsp;&#47;&nbsp;
-                  <a href="./client/Unix.MSshKey.html">MultipleSshKey</a>
+                  <a href="./client/Unix.MSSHkey.html">MultipleSshKey</a>
                 </div>
               </div>
           </li>  
@@ -230,7 +230,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-28 21:20:06</p>
+        <p>Page Updated 2019-08-28 23:40:10</p>
       </div> <!-- end footer-right -->
     </div>
 
