Update output documentation

--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
         <ul>  
           <li class="pagelist">
               <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Monitoring/Cacti&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./ops/OpsMon.Cacti.html">Cacti</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;System/Scanning&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./ops/OpsSystem.Masscan.html">Masscan</a>
@@ -214,6 +222,15 @@
                   <a href="./storage/Storage.DiskParted.html">Parted</a>
                 </div>
               </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Storage/Filesystem&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./storage/Storage.RsyncOs.html">RsyncOs</a>&nbsp;&#47;&nbsp;
+                  <a href="./storage/Storage.FSSersync.html">SersyncInotify</a>
+                </div>
+              </div>
           </li>
         </ul>
       </div> <!-- end category_list -->
@@ -230,7 +247,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-28 23:40:10</p>
+        <p>Page Updated 2019-08-29 23:44:02</p>
       </div> <!-- end footer-right -->
     </div>
 
